--- a/udacity-c3-deployment/docker/docker-compose.yaml
+++ b/udacity-c3-deployment/docker/docker-compose.yaml
@@ -11,28 +11,28 @@ services:
   backend-user:
     image: yibrahim/udacity-restapi-user
     environment:
-      POSTGRESS_USERNAME: process.env.AWS_USERNAME
-      POSTGRESS_PASSWORD: process.env.AWS_USERNAME
-      POSTGRESS_DB: process.env.AWS_DATABASE
-      POSTGRESS_HOST: process.env.AWS_HOST
-      AWS_REGION: process.env.AWS_REGION
-      AWS_PROFILE: process.env.AWS_PROFILE
-      AWS_BUCKET: process.env.AWS_BUCKET
-      JWT_SECRET: process.env.AWS_JWT
+      POSTGRESS_USERNAME: $AWS_USERNAME
+      POSTGRESS_PASSWORD: $AWS_PASSWORD
+      POSTGRESS_DB: $AWS_DATABASE
+      POSTGRESS_HOST: $AWS_HOST
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $AWS_JWT
       URL: "http://localhost:8100"
   backend-feed:
     image: yibrahim/udacity-restapi-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRESS_USERNAME: process.env.AWS_USERNAME
-      POSTGRESS_PASSWORD: process.env.AWS_USERNAME
-      POSTGRESS_DB: process.env.AWS_DATABASE
-      POSTGRESS_HOST: process.env.AWS_HOST
-      AWS_REGION: process.env.AWS_REGION
-      AWS_PROFILE: process.env.AWS_PROFILE
-      AWS_BUCKET: process.env.AWS_BUCKET
-      JWT_SECRET: process.env.AWS_JWT
+      POSTGRESS_USERNAME: $AWS_USERNAME
+      POSTGRESS_PASSWORD: $AWS_PASSWORD
+      POSTGRESS_DB: $AWS_DATABASE
+      POSTGRESS_HOST: $AWS_HOST
+      AWS_REGION: $AWS_REGION
+      AWS_PROFILE: $AWS_PROFILE
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $AWS_JWT
       URL: "http://localhost:8100"
   frontend:
     image: yibrahim/udacity-frontend
