--- a/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
+++ b/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
@@ -1,16 +1,23 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: backend-feed
   name: backend-feed
 spec:
-  replicas: 3
+  replicas: 1
+  selector:
+    matchLabels:
+      service: backend-feed
   template:
     metadata:
       labels:
         service: backend-feed
     spec:
+      volumes:
+        - name: configmap-volume
+          configMap:
+            name: env-config
       containers:
         - image: yibrahim/udacity-restapi-feed
           name: backend-feed
