--- a/udacity-c3-deployment/k8s/env-configmap.yaml
+++ b/udacity-c3-deployment/k8s/env-configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: process.env.BUCKET
-  AWS_PROFILE: process.env.PROFILE
-  AWS_REGION: process.env.REGION
-  JWT_SECRET: process.env.JWT
-  POSTGRESS_DB: process.env.DATABASE
-  POSTGRESS_HOST: process.env.HOST
+  AWS_BUCKET: $AWS_BUCKET
+  AWS_PROFILE: $AWS_PROFILE
+  AWS_REGION: $AWS_REGION
+  JWT_SECRET: $AWS_JWT
+  POSTGRESS_DB: $AWS_DATABASE
+  POSTGRESS_HOST: $AWS_HOST
   URL: http://localhost:8100
 metadata:
   name: env-config
